# webapp

./: .gitignore  README.md  compose.yml  dockercompose.yml
app/: Dockerfile  pyproject.toml
app/wym/: app.py  db_utils.py  db_utils_2.py  db_utils_alch.py  hello_world.py  model_utils.py
app/wym/static/css/: product.css
app/wym/templates/: about.html  base.html  contact.html  contacted.html  dash.html  home.html  mario.html  model.html  model_serve.html
monitoring/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
monitoring/monitoring/: dashboard.py  db_utils.py  test_dashboard_vbd.py
monitoring/tests/: test_monitoring.py
